Added error descriptions in swagger
