# internal/handlers/errors.go
@@ -1,0 +1,6 @@
+package handlers
+
+type HTTPError struct {
+	Code    string `json:"code" example:"EXAMPLE_ERROR_CODE"`
+	Message string `json:"message" example:"example error message"`
+}
